Fix navbar/tab-bar/action-bar spacing and move sidebar into tab panes
Update hardcoded 55px navbar height to 51px across CSS and XSLT to match
actual rendered height after search bar refactoring. Move left-sidebar from
global #left-sidebar to per-tab-pane .left-sidebar, store endpoint/base/application
as data attributes on tab panes instead of tab-bar list items, and refactor
navigation to scope sidebar operations to the active tab pane.

--- a/src/main/webapp/static/com/atomgraph/linkeddatahub/css/bootstrap.css
+++ b/src/main/webapp/static/com/atomgraph/linkeddatahub/css/bootstrap.css
@@ -1,7 +1,7 @@
 html { height: 100%; }
 /* only the main navbar is fixed-top now; tab bar + action bar are sticky inside #tab-body */
-body { height: calc(100% - 55px); padding-top: 55px; padding-bottom: 0; }
-#tab-bar { position: sticky; top: 55px; z-index: 1000; margin-bottom: 0; }
+body { height: calc(100% - 51px); padding-top: 51px; padding-bottom: 0; }
+#tab-bar { position: sticky; top: 51px; z-index: 1000; margin-bottom: 0; }
 /* Override Bootstrap's overflow:auto which would make action-bar sticky relative to #tab-content instead of the viewport */
 #tab-content { overflow: visible; }
 #tab-bar.navbar-inner { min-height: 36px; padding: 4px 0; background: #ccc; box-shadow: none; }
@@ -28,7 +28,7 @@ ul.dropdown-menu ul { margin: 0; }
 #collapsing-top-navbar .brand.context { display: inline-block; vertical-align: middle; }
 .navbar-form input#uri { width: calc(100% - 50px); }
 .navbar-form .btn-search { background-image: url('../icons/ic_search_white_24px.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
-.action-bar { position: sticky; top: var(--action-bar-top, 55px); z-index: 999; background: #dfdfdf; padding: 0; box-shadow: none; }
+.action-bar { position: sticky; top: var(--action-bar-top, 51px); z-index: 999; background: #dfdfdf; padding: 0; box-shadow: none; }
 .action-bar form { margin-bottom: 0; }
 .action-bar .span7 .row-fluid > * { margin-top: 10px; }
 .action-bar .row-fluid > .span2, .action-bar .row-fluid > .span3 { margin-top: 10px; }
@@ -94,19 +94,19 @@ li button.btn-edit-constructors, li button.btn-add-data, li button.btn-add-ontol
 .dropdown-menu > li > a.btn-list { background-image: url('../icons/view_list_black_24dp.svg'); background-position: 12px center; background-repeat: no-repeat; padding: 5px 5px 5px 40px; }
 .dropdown-menu > li > a.btn-table { background-image: url('../icons/ic_border_all_black_24px.svg'); background-position: 12px center; background-repeat: no-repeat; padding: 5px 5px 5px 40px; }
 .dropdown-menu > li > a.btn-grid { background-image: url('../icons/ic_grid_on_black_24px.svg'); background-position: 12px center; background-repeat: no-repeat; padding: 5px 5px 5px 40px; }
-#left-sidebar { display: none; width: 15%; position: fixed; left: 0; top: 106px; height: calc(100% - 106px); }
+.left-sidebar { display: none; width: 15%; position: fixed; left: 0; top: var(--action-bar-top, 51px); height: calc(100% - var(--action-bar-top, 51px)); z-index: 1001; }
 @media (max-width: 979px)
 {
     body { padding-top: 0; }
-    #left-sidebar { display: block; width: auto; position: unset; top: unset; height: auto; }
-    #left-sidebar .nav { max-height: 20em; overflow: auto; }
+    .left-sidebar { display: block; width: auto; position: unset; top: unset; height: auto; z-index: auto; }
+    .left-sidebar .nav { max-height: 20em; overflow: auto; }
 }
-#left-sidebar .nav-list > li > a.btn-container { padding-left: 24px; }
-#left-sidebar .nav-list > li > a { margin-left: 0; margin-right: 0; }
-#left-sidebar ul { max-height: 22em; overflow: auto; }
-#left-sidebar li > a { display: inline-block; }
-#left-sidebar .btn-latest { background-image: url('../icons/ic_new_releases_black_24px.svg'); background-color: inherit; }
-#left-sidebar .btn-geo { background-image: url('../icons/ic_location_on_black_24px.svg'); background-color: inherit; }
+.left-sidebar .nav-list > li > a.btn-container { padding-left: 24px; }
+.left-sidebar .nav-list > li > a { margin-left: 0; margin-right: 0; }
+.left-sidebar ul { max-height: 22em; overflow: auto; }
+.left-sidebar li > a { display: inline-block; }
+.left-sidebar .btn-latest { background-image: url('../icons/ic_new_releases_black_24px.svg'); background-color: inherit; }
+.left-sidebar .btn-geo { background-image: url('../icons/ic_location_on_black_24px.svg'); background-color: inherit; }
 
 .btn.btn-expand-tree { height: 24px; width: 24px; background-image: url('../icons/expand_more_black_24dp.svg'); }
 .btn.btn-expand-tree:hover, .btn.btn-expand-tree:focus { background-position: 0 0; }
